# komabasai2024-b

./: .gitignore  README.md
auto_operation/: README.md
ptcs/: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
ptcs/data/gogatsusai2024/: railway_ui.json  railway_ui_v3.json  railway_ui_v4.json  railway_ui_v5.json
ptcs/data/komabasai2024/: railway_ui_test_v1.json  railway_ui_test_v2.json  railway_ui_v1.json  railway_ui_v2.json
ptcs/data/v1/: RailwayConfig.schema.json  railway_config.json  railway_ui.json
ptcs/docs/: gogatsusai2024.drawio  gogatsusai2024_v2.drawio  gogatsusai2024_v3.drawio  gogatsusai2024_v4.drawio  gogatsusai2024_v5.drawio  komabasai2024_test_v1.drawio  komabasai2024_test_v2.drawio  komabasai2024_v1.drawio  komabasai2024_v2.drawio  ポイントの向き.drawio  列車制御システム.drawio  路線図.drawio
ptcs/point_switching/: manual_test.py
ptcs/point_switching/point_switching/: point_switching.ino
ptcs/ptcs_bridge/: __init__.py  bridge.py  bridge2.py  master_controller_client.py  point_client.py  send_receive.py  train_base.py  train_client.py  train_simulator.py  util.py  wire_pole_client.py
ptcs/ptcs_client/: package.json
ptcs/ptcs_control/: README.md  __init__.py  components.py  config.py  constants.py  control.py  gogatsusai2024.py  gogatsusai2024_generated.py  komabasai2024.py  komabasai2024_generated.py  komabasai2024_test_generated.py  mft2023.py  railway_command.py  railway_config.py  railway_state.py  state.py
ptcs/ptcs_control/ATO/: README.md
ptcs/ptcs_control/ATP/: README.md
ptcs/ptcs_control/components/: __init__.py  base.py  direction.py  joint.py  junction.py  length.py  obstacle.py  position.py  section.py  sensor_position.py  station.py  stop.py  train.py
ptcs/ptcs_control/control/: base.py  events.py  fixed_block.py  moving_block.py
ptcs/ptcs_server/: api.py  bridges.py  button.py  cli.py  gogatsusai2024.py  komabasai2024.py  mft2023.py  points.py  server.py
ptcs/ptcs_server/api/: router.py
ptcs/ptcs_server/types/: state.py
ptcs/ptcs_ui/: package.json  vite.config.ts
ptcs/ptcs_ui/src/: main.tsx
ptcs/ptcs_ui/src/components/: Debugger.tsx  Information.tsx  Junction.tsx  Layout.tsx  Obstacle.tsx  Platform.tsx  Railway.tsx  Section.tsx  Stop.tsx  Train.tsx
ptcs/ptcs_ui/src/config/: ui.ts
ptcs/ptcs_ui/src/contexts/: index.ts
ptcs/ptcs_ui/src/lib/: point.ts
ptcs/ptcs_ui/src/pages/: Home.tsx
ptcs/ptcs_ui/src/types/: index.ts
ptcs/scripts/: parse_drawio.py
ptcs/usb_bt_bridge/: README.md  bridge.py  send_receive.py
ptcs/usb_bt_bridge/receiver/: receiver.ino
ptcs/usb_bt_bridge/receiver.ino/: receiver.ino
(+150 files in other folders)
