[tool.poetry]
name = "ptcs"
version = "0.1.0"
description = ""
authors = ["UTokyo Plarailers <plarailers@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ptcs_control" },
    { include = "ptcs_server" },
    { include = "usb_bt_bridge" },
]

[tool.poetry.scripts]
ptcs = "main:main"
server = "ptcs_server.cli:main"
scan = "serial.tools.list_ports:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.3"
fastapi = "^0.88.0"
uvicorn = "^0.23.2"
pydantic = "^1.10.2"
pyserial = "^3.5"
pythonnet = "^3.0.2"
pywebview = "^4.3.3"
types-pyserial = "^3.5.0.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
