[tool.poetry]
name = "ptcs"
version = "0.1.0"
description = ""
authors = ["UTokyo Plarailers <plarailers@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ptcs_bridge" },
    { include = "ptcs_control" },
    { include = "ptcs_server" },
]

[tool.poetry.scripts]
ptcs = "main:main"
server = "ptcs_server.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bleak = "^0.22.3"
click = "^8.1.7"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pythonnet = "^3.0.4"
pywebview = "^5.3.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
